# snowden

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  snowden-paper.html
infra/: continuous_aggs.sql  init.sql  openclaw.json
infra/grafana/: datasource.yml
infra/grafana/dashboards/: calibration.json  overview.json  risk.json  scanner.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/migrations/: 001_observability.sql
scripts/: backtest.py  calibration_report.py  paper_trade.py  resolve.py  scan_once.py
snowden/: __init__.py  alerts.py  calibrate.py  config.py  env.py  health.py  kelly.py  market.py  news.py  scanner.py  sim.py  store.py  types.py
snowden/agents/: __init__.py  analyst.py  chief.py  sentinel.py  trader.py
snowden/skills/analyst/: SKILL.md
snowden/skills/chief/: SKILL.md
snowden/skills/sentinel/: SKILL.md
snowden/skills/trader/: SKILL.md
tests/: conftest.py  test_agents.py  test_calibrate.py  test_env.py  test_kelly.py  test_market.py  test_scanner.py  test_store.py  test_types.py
