[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowden"
version = "0.1.0"
description = "Prediction market trading system"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "asyncpg>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "py-clob-client>=0.18",
    "gymnasium>=1.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "respx>=0.21",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "feedparser",
    "sklearn.*",
    "asyncpg",
    "asyncpg.*",
    "py_clob_client.*",
    "gymnasium",
    "gymnasium.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]

[tool.pytest-asyncio]
mode = "auto"
